# DataLab-Kernel

./: README.md  Untitled.ipynb  pyproject.toml  simple_example.ipynb
.github/workflows/: test.yml
datalab_kernel/: __init__.py  __main__.py  install.py  kernel.py  objects.py  plotter.py  serialization_npz.py  startup.py  workspace.py
datalab_kernel/backends/: __init__.py  pyfetch.py  webapi.py
datalab_kernel/tests/: README.md  __init__.py  conftest.py  data.py  test_webapi_backend.py
datalab_kernel/tests/contract/: test_api.py
datalab_kernel/tests/integration/: test_live_backend.py
datalab_kernel/tests/unit/: test_install.py  test_kernel.py  test_objects.py  test_persistence.py  test_plotter.py  test_workspace.py
doc/: conf.py  index.rst  requirements.rst
doc/_static/: custom.css
doc/api/: index.rst  objects.rst  plotter.rst  workspace.rst
doc/contributing/: development.rst  guidelines.rst  index.rst
doc/examples/: basic_usage.rst  index.rst  live_mode.rst  persistence.rst
doc/user_guide/: features.rst  getting_started.rst  index.rst  installation.rst  overview.rst
plans/: architecture.md  specification.md  tests.md
scripts/: serve_dev_wheels.py
