[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab-kernel"
version = "0.1.0"
description = "A standalone Jupyter kernel for DataLab with optional live synchronization"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "DataLab Platform Developers", email = "p.raybaut@codra.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["jupyter", "kernel", "datalab", "scientific", "data processing"]
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.0",
    "jupyter-client>=7.0",
    "numpy>=1.22",
    "h5py>=3.0",
    "matplotlib>=3.5",
    "sigima>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
doc = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.14",
    "myst-nb>=1.0",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
]
datalab = [
    "datalab-platform>=1.0",
]

[project.urls]
Homepage = "https://github.com/DataLab-Platform/DataLab-Kernel"
Documentation = "https://datalab-kernel.readthedocs.io/"
Repository = "https://github.com/DataLab-Platform/DataLab-Kernel.git"
Issues = "https://github.com/DataLab-Platform/DataLab-Kernel/issues"

[project.scripts]
datalab-kernel-install = "datalab_kernel.install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datalab_kernel*"]

[tool.pytest.ini_options]
testpaths = ["datalab_kernel/tests"]
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "standalone: tests that run in standalone mode only",
    "live: tests that require a live DataLab instance",
    "contract: contract tests (run in both modes)",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["datalab_kernel"]
omit = ["datalab_kernel/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
